--- a/nuxt-shop/assets/styles/main.css
+++ b/nuxt-shop/assets/styles/main.css
@@ -11,3 +11,11 @@
 body {
     font-family: var(--font);
 }
+
+h1{
+    color: var(--color-black);
+    text-align: center;
+    font-weight: 500;
+    font-size: 33px;
+    line-height: 43px;
+}
